examples/test/testpolicy3091.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3091
  namespace: namespace188
spec:
  podSelector:
    matchLabels:
      key4: value29
      key30: value2
      key12: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value45
      podSelector:
        matchLabels:
          key8: value12
          key0: value41
